--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.6.0",
+    "chart.js": "^2.9.4",
     "gh-pages": "^3.1.0",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
+    "react-chartkick": "^0.4.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
     "typescript": "^4.2.2",
